# python_advanced_diploma

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  fabfile.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: cc018187de35_init_models.py
config/: __init__.py  config.py
nginx/: nginx.conf
scr/app/: main.py
scr/app/api/v1/endpoints/: medias.py  tweets.py  users.py
scr/core/: __init__.py  dependencies.py  logger.py
scr/database/: __init__.py  database.py  init_db.py
scr/database/models/: __init__.py  base.py  like.py  media.py  tweet.py  user.py
scr/schemas/: __init__.py  like.py  media.py  response.py  tweet.py  user.py
scr/services/: __init__.py  media_service.py  tweet_service.py  user_service.py
scr/static/: index.html
tests/: conftest.py  pytest.ini  test_api_tweets.py  test_api_users.py  test_tweet_service.py  test_user_service.py
